Fixed linkedin alignemnt

--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -4,6 +4,7 @@ footer {
   padding-top: 40px;
   background: #323B42;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #fff;
@@ -19,11 +20,11 @@ footer {
     align-items: center;
     position: relative;
     opacity: 0;
+    margin: 0 auto;
     .social-link {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 0 20px;
       i {
         font-size: 4rem;
         max-height: 80px;
